feat: Add favicons and manifest file
Add necessary files for favicons and manifest file. Also, add the
corresponding HTML tags to the index.html file to enable favicon
functionality.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             property="og:description"
             content="Review, summarize, explain, and improve code via PR comments. Works with GitHub Actions. Providers: Gemini, ChatGPT, Claude."
         />
-        <!-- TODO: Update og:image to your final Cloudflare domain -->
         <meta
             property="og:image"
             content="https://aido-dev.ai/assets/images/aido_white_bg-2.png"
@@ -30,6 +29,29 @@
         <meta name="theme-color" content="#0a1630" />
 
         <link rel="stylesheet" href="assets/css/style.css" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="assets/favicons/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="assets/favicons/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="assets/favicons/favicon-16x16.png"
+        />
+        <link
+            rel="shortcut icon"
+            href="assets/favicons/favicon.ico"
+            type="image/x-icon"
+        />
+        <link rel="manifest" href="assets/favicons/site.webmanifest" />
     </head>
     <body>
         <div class="stars"></div>
