--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Aido — AI Coding Assistant for GitHub PRs</title>
         <meta
             name="description"
-            content="Aido is an open-source, multi-provider AI coding assistant for GitHub pull requests. Review, summarize, explain, and improve code directly from PR comments."
+            content="Aido is an open-source, multi-provider AI coding assistant for GitHub pull requests. Review, summarize, explain, improve code, and generate documentation drafts directly from PR comments."
         />
         <link rel="icon" href="assets/images/aido_white_bg-2.png" />
         <meta
@@ -18,17 +18,31 @@
         />
         <meta
             property="og:description"
-            content="Review, summarize, explain, and improve code via PR comments. Works with GitHub Actions. Providers: Gemini, ChatGPT, Claude."
+            content="Review, summarize, explain, improve code, and generate docs via PR comments. Works with GitHub Actions. Providers: Gemini, ChatGPT, Claude."
         />
         <meta
             property="og:image"
             content="https://aido-dev.ai/assets/images/aido_white_bg-2.png"
         />
-        <!-- TODO: Update og:url to your final Cloudflare domain -->
         <meta property="og:url" content="https://aido-dev.ai/" />
+        <meta property="og:type" content="website" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta
+            name="twitter:title"
+            content="Aido — AI Coding Assistant for GitHub PRs"
+        />
+        <meta
+            name="twitter:description"
+            content="Review, summarize, explain, improve code, and generate docs via PR comments. Works with GitHub Actions. Providers: Gemini, ChatGPT, Claude."
+        />
+        <meta
+            name="twitter:image"
+            content="https://aido-dev.ai/assets/images/aido_white_bg-2.png"
+        />
         <meta name="theme-color" content="#0a1630" />
+        <link rel="canonical" href="https://aido-dev.ai/" />
 
-        <link rel="stylesheet" href="assets/css/style.css" />
+        <link rel="stylesheet" href="assets/css/style.css?v=0.005" />
         <link
             rel="apple-touch-icon"
             sizes="180x180"
@@ -52,6 +66,38 @@
             type="image/x-icon"
         />
         <link rel="manifest" href="assets/favicons/site.webmanifest" />
+
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "SoftwareApplication",
+                "name": "Aido",
+                "description": "Open-source, multi-provider AI coding assistant for GitHub pull requests. Review, summarize, explain, improve code, and generate documentation drafts directly from PR comments.",
+                "url": "https://aido-dev.ai/",
+                "applicationCategory": "DeveloperApplication",
+                "operatingSystem": "Any",
+                "offers": {
+                    "@type": "Offer",
+                    "price": "0",
+                    "priceCurrency": "USD"
+                },
+                "author": {
+                    "@type": "Organization",
+                    "name": "Aido",
+                    "url": "https://github.com/aido-dev"
+                },
+                "softwareVersion": "1.0.5",
+                "featureList": [
+                    "AI-powered code reviews",
+                    "PR summarization",
+                    "Code explanations",
+                    "Code improvement suggestions",
+                    "Documentation generation",
+                    "Multi-provider support (Gemini, ChatGPT, Claude)",
+                    "GitHub Actions integration"
+                ]
+            }
+        </script>
     </head>
     <body>
         <div class="stars"></div>
@@ -77,9 +123,11 @@
                     <p class="paragraph">
                         Meet Aido — your open-source, multi-provider AI coding
                         assistant for GitHub. Run code reviews, summaries,
-                        explanations, and code improvements directly from pull
-                        request comments using
-                        <code>aido &lt;command&gt;</code>.
+                        explanations, code improvements, and documentation
+                        drafts directly from pull request comments using
+                        <code style="text-wrap-mode: nowrap"
+                            >aido &lt;command&gt;</code
+                        >.
                     </p>
 
                     <p class="paragraph">
@@ -156,6 +204,36 @@
                                 Explains tricky diffs in plain language,
                                 includes examples, trade-offs, and references
                                 for faster onboarding.
+                            </p>
+                        </div>
+                        <div class="card">
+                            <h3>
+                                <code>aido docs</code>
+                                <span
+                                    style="
+                                        display: inline-block;
+                                        margin-left: 8px;
+                                        padding: 2px 8px;
+                                        background: linear-gradient(
+                                            135deg,
+                                            #8ab4ff,
+                                            #6a94df
+                                        );
+                                        color: #051028;
+                                        font-size: 11px;
+                                        font-weight: 700;
+                                        border-radius: 6px;
+                                        vertical-align: middle;
+                                        text-transform: uppercase;
+                                        letter-spacing: 0.5px;
+                                    "
+                                    >New</span
+                                >
+                            </h3>
+                            <p>
+                                Generates documentation drafts based on code
+                                changes in the PR, making it easier to keep docs
+                                in sync with implementation.
                             </p>
                         </div>
                     </div>
@@ -240,6 +318,7 @@
                             <img
                                 src="assets/images/aido_2.png"
                                 alt="Aido floating with code panel"
+                                loading="lazy"
                             />
                             <h3>AI-Powered Code Reviews</h3>
                             <p>
@@ -254,6 +333,7 @@
                             <img
                                 src="assets/images/aido_6.png"
                                 alt="Aido in a rocket"
+                                loading="lazy"
                             />
                             <h3>Speed Up Code Reviews</h3>
                             <p>
@@ -268,6 +348,7 @@
                             <img
                                 src="assets/images/aido_11.png"
                                 alt="Aido hunting bugs"
+                                loading="lazy"
                             />
                             <h3>Find Bugs Early</h3>
                             <p>
@@ -282,6 +363,7 @@
                             <img
                                 src="assets/images/aido_9.png"
                                 alt="Aido and friend thumbs up"
+                                loading="lazy"
                             />
                             <h3>Seamless GitHub Integration</h3>
                             <p>
@@ -296,6 +378,7 @@
                             <img
                                 src="assets/images/aido_5.png"
                                 alt="Aido winner"
+                                loading="lazy"
                             />
                             <h3>Simple for Everyone</h3>
                             <p>
@@ -309,12 +392,27 @@
                             <img
                                 src="assets/images/aido_4.png"
                                 alt="Aido with a mug"
+                                loading="lazy"
                             />
                             <h3>Understand Code Easily</h3>
                             <p>
                                 Aido explains tricky changes in plain language —
                                 perfect for onboarding, code reviews, and anyone
-                                who wants to understand what’s really going on.
+                                who wants to understand what's really going on.
+                            </p>
+                        </div>
+
+                        <div class="card">
+                            <img
+                                src="assets/images/aido_7.png"
+                                alt="Aido with documentation"
+                                loading="lazy"
+                            />
+                            <h3>Keep Documentation in Sync</h3>
+                            <p>
+                                Automatically generate documentation drafts from
+                                your code changes. Aido helps keep your docs
+                                up-to-date without the manual effort.
                             </p>
                         </div>
 
@@ -322,6 +420,7 @@
                             <img
                                 src="assets/images/aido_15.png"
                                 alt="Aido floating in space"
+                                loading="lazy"
                             />
                             <h3>Free &amp; Open Source</h3>
                             <p>
@@ -335,6 +434,7 @@
                             <img
                                 src="assets/images/aido_8.png"
                                 alt="Aido high-five with octo-cat friend"
+                                loading="lazy"
                             />
                             <h3>Built for GitHub</h3>
                             <p>
@@ -348,6 +448,7 @@
                             <img
                                 src="assets/images/aido_3.png"
                                 alt="Aido planting a flag"
+                                loading="lazy"
                             />
                             <h3>Deliver Better Code, Faster</h3>
                             <p>
