Add docs command to instructions and remove redundant general icon declaration

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             name="description"
             content="Aido is an open-source, multi-provider AI coding assistant for GitHub pull requests. Review, summarize, explain, improve code, and generate documentation drafts directly from PR comments."
         />
-        <link rel="icon" href="assets/images/aido_white_bg-2.png" />
+
         <meta
             property="og:title"
             content="Aido — AI Coding Assistant for GitHub PRs"
@@ -275,9 +275,10 @@
                         <div class="card">
                             <h3>3) Comment to run</h3>
                             <p>
-                                Type <code>aido review</code> or
-                                <code>aido summarize</code> in your PR. Aido
-                                replies with structured output.
+                                Type <code>aido review</code>,
+                                <code>aido summarize</code> or
+                                <code>aido docs</code> in your PR. Aido replies
+                                with structured output.
                             </p>
                         </div>
                         <div class="card">
