Update footer social links with GitHub and X

--- a/index.html
+++ b/index.html
@@ -512,7 +512,15 @@
                 target="_blank"
                 rel="noopener"
                 style="color: #9db0d0"
-                >github.com/aido-dev/aido</a
+                >GitHub</a
+            >
+            ·
+            <a
+                href="https://x.com/aido_dev"
+                target="_blank"
+                rel="noopener"
+                style="color: #9db0d0"
+                >X</a
             >
         </footer>
 
