Add Content Security Policy to upgrade insecure requests

--- a/404.html
+++ b/404.html
@@ -18,6 +18,10 @@
         <meta property="og:image" content="assets/images/aido_white_bg-2.png" />
         <meta property="og:url" content="/" />
         <meta name="theme-color" content="#0a1630" />
+        <meta
+            http-equiv="Content-Security-Policy"
+            content="upgrade-insecure-requests"
+        />
     </head>
     <body>
         <div class="stars"></div>
