--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             content="https://aido-dev.ai/assets/images/aido_white_bg-2.png"
         />
         <meta name="theme-color" content="#0a1630" />
+        <meta
+            http-equiv="Content-Security-Policy"
+            content="upgrade-insecure-requests"
+        />
         <link rel="canonical" href="https://aido-dev.ai/" />
 
         <link rel="stylesheet" href="assets/css/style.css?v=0.006" />
